--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -78,7 +78,7 @@
 .navItem a {
     text-decoration: none;
     color: var(--neutral-light);
-    font-family: var(--font-opensans), sans-serif;
+    font-family: var(--font-inter);
     font-weight: 500;
     transition: color 0.3s;
 }
